--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,23 +1,13 @@
-<header class="bg-[#0d0d30] w-screen h-20 fixed">
-  <div class="flex justify-between items-center h-full px-4">
-    <div class="flex items-center">
-      <a class="text-slate-200 hover:underline m-6" href="#"> Inicio </a>
-    </div>
+---
+import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
+---
 
-    <div class="flex-grow flex justify-center ml-20">
-      <img src="../../public/image-1.png" class="rounded-full h-16 w-16 hover:h-20 hover:w-20 transition-all duration-500 cursor-pointer " />
-    </div>
 
-    <div class="flex items-center">
-      <a
-        class="text-slate-200 hover:underline m-6"
-        href="https://github.com/AulaSoftwareLibreCordoba">GitHub</a
-      >
-      <a
-        class="text-slate-200 hover:underline m-6"
-        href="https://www.linkedin.com/company/aula-de-software-libre-lope-de-vega/"
-        >LinkedIn</a
-      >
+<header class="bg-[#0d0d30] w-screen h-20 fixed z-50">
+  <div class="flex justify-start items-center h-full px-4">
+    <div class="flex-grow flex justify-center">
+      <img src="../../public/logo.svg" class="rounded-full h-16 w-16 hover:h-[4.5rem] hover:w-[4.5rem] transition-all duration-500 cursor-pointer " />
+    </div>
     </div>
   </div>
 </header>
