--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ interface Props {
 	title: string;
 }
 import Header from '../components/Header.astro';
+import Hero from '../components/Hero.astro';
 
 const { title } = Astro.props;
 ---
@@ -13,13 +14,14 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image" href="../../public/image-1.png" />
+		<link rel="icon" type="image" href="../../public/logo.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
 		<Header />
 		<slot />
+		<Hero client:load/>
 	</body>
 </html>
 
