--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
+
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./Herojs.js"/>
   </head>
-  <body>
+
     <section
 
       class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-[#22235f] via-[#27286b] to-[#0d0d30] bg-center bg-cover"
@@ -46,16 +43,10 @@
         </a>
         <div class="flex justify-center">
           <img
-            src="../../public/photo.webp"
+            src="../../photo.webp"
             alt="Dashboard image"
             class="rounded-t-3xl h-auto object-cover w-[90%] md:w-[65%] shadow-2xl"
           />
         </div>
       </div>
     </section>
-
-    <script>
-
-    </script>
-  </body>
-</html>
