--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,9 +19,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<Header />
+		<Header/>
 		<slot />
-		<Hero client:load/>
+		<Hero/>
 	</body>
 </html>
 
