--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,3 +1,9 @@
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="./Herojs.js"/>
+</head>
+
 <section
   class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-[#22235f] via-[#27286b] to-[#0d0d30] bg-center bg-cover"
 >
@@ -5,13 +11,16 @@
     <h1
       class="max-w-lg mx-auto font-bold text-4xl md:text-5xl text-white mb-4 leading-tight"
     >
-      <span id="animatedTitle" class="text-white"></span>
+      <span id="animatedTitle" class="text-white "></span>
       <span id="animatedTitle2" class="text-blue-600"></span>
-      <span id="cursor" class="text-white">|</span>
+      <span
+        id="cursor"
+        class="text-white">|</span
+      >
     </h1>
     <p class="max-w-md mx-auto text-sm font-normal text-gray-500 mb-6">
-      Transformamos Ideas en Soluciones Abiertas, Fomentando el Conocimiento y
-      la Creatividad en Cada Proyecto.
+      Transformamos Ideas en Soluciones Abiertas, Fomentando el Conocimiento
+      y la Creatividad en Cada Proyecto.
     </p>
     <a
       class="cursor-pointer w-auto mb-10 inline-flex items-center justify-center py-3 px-6 text-base font-semibold text-center text-white rounded-full bg-blue-600 shadow-xs hover:bg-blue-800 transition-all duration-500"
@@ -41,5 +50,3 @@
     </div>
   </div>
 </section>
-
-<script src="./Herojs.js"></script>
