--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,3 @@
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="./Herojs.js"/>
-</head>
-
 <section
   class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-[#22235f] via-[#27286b] to-[#0d0d30] bg-center bg-cover"
 >
@@ -11,10 +5,9 @@
     <h1
       class="max-w-lg mx-auto font-bold text-4xl md:text-5xl text-white mb-4 leading-tight"
     >
-      <span id="animatedTitle" class="text-white "></span>
-      <span id="animatedTitle2" class="text-blue-600"></span>
+      <span class="text-white ">Bienvenid@ al</span>
+      <span class="text-blue-600">Aula de Software Libre</span>
       <span
-        id="cursor"
         class="text-white">|</span
       >
     </h1>
