creación del componente sección

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,10 +6,8 @@
       class="max-w-lg mx-auto font-bold text-4xl md:text-5xl text-white mb-4 leading-tight"
     >
       <span class="text-white ">Bienvenid@ al</span>
-      <span class="text-blue-600">Aula de Software Libre</span>
-      <span
-        class="text-white">|</span
-      >
+      <span class="typing text-blue-600">Aula de Software Libre</span>
+
     </h1>
     <p class="max-w-md mx-auto text-sm font-normal text-gray-500 mb-6">
       Transformamos Ideas en Soluciones Abiertas, Fomentando el Conocimiento
