--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ interface Props {
 }
 import Header from '../components/Header.astro';
 import Hero from '../components/Hero.astro';
+import Section from '../components/Section.astro';
 
 const { title } = Astro.props;
 ---
@@ -22,6 +23,8 @@ const { title } = Astro.props;
 		<Header/>
 		<slot />
 		<Hero/>
+		<slot />
+		<Section />
 	</body>
 </html>
 
