cambios en el header y en la estilización general

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,17 +1,12 @@
-<!-- ---
+---
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
 import { faCode } from "@fortawesome/free-solid-svg-icons";
 ---
 
 
-<section class="w-full h-96 flex gap-4 items-center place-content-center">
-  <div class="bg-[#030310] w-full h-80 p-10 m-10">
+<section class="w-full h-96">
+  <div class="bg-gradient-to-b from-[#0d0d30] via-[#0c0c2e] to-transparent w-full h-32 ">
 
   </div>
-  <div class="bg-[#030310] w-full h-80 p-10 m-10">
-    <header class="mx-auto font-bold text-4xl md:text-5xl text-white leading-tight text-center flex gap-5">
-      <h1 class="items-center">Apostando por el Open Source</h1>
-      <FontAwesomeIcon icon={faCode} className="size-10 items-center mt-2" />
-    </header>
-  </div>
-</section> -->
+</section>
+
