--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,12 +2,23 @@
 
 ---
 
-
-<header class="bg-[#0d0d30] w-screen h-20 fixed z-50">
-  <div class="flex justify-start items-center h-full px-4">
-    <div class="flex-grow flex justify-center">
-      <img src="../../logo.svg" class="rounded-full h-16 w-16 hover:h-[4.5rem] hover:w-[4.5rem] transition-all duration-500 cursor-pointer " />
-    </div>
-    </div>
+<header
+  class="bg-gradient-to-b from-[#0d0d30] to-transparent w-screen h-20 fixed z-50"
+>
+  <div class="flex items-center h-full px-4 justify-between">
+    <ul class="flex gap-3 text-slate-400 ml-5">
+      <li>
+        <a href="#" class="hover:text-white transition-all duration-300">
+          Inicio
+        </a>
+        </li>
+    </ul>
+    <ul class="flex gap-3 text-slate-400 mr-5">
+      <li>
+        <a href="#contacto" class="hover:text-white transition-all duration-300">
+          Contacto
+        </a>
+      </li>
+    </ul>
   </div>
 </header>
