--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,7 @@
 >
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center">
     <h1
-      class="max-w-lg mx-auto font-bold text-4xl md:text-5xl text-white mb-4 leading-tight"
+      class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-4 leading-tight"
     >
       <span class="text-white ">Bienvenid@ al</span>
       <span class="typing text-blue-600">Aula de Software Libre</span>
