creación estilización del footer responsive

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,9 +14,10 @@
       y la Creatividad en Cada Proyecto.
     </p>
     <a
-      class="cursor-pointer w-auto mb-10 inline-flex items-center justify-center py-3 px-6 text-base font-semibold text-center text-white rounded-full bg-blue-600 shadow-xs hover:bg-blue-800 transition-all duration-500"
+      class="cursor-pointer w-auto mb-10 inline-flex items-center justify-center py-3 px-6 text-base font-semibold text-center text-white rounded-full bg-blue-600 shadow-xs hover:bg-blue-800 hover:scale-105 transition-all duration-500"
     >
-      Únete a nosotros <svg
+      Únete a nosotros 
+      <svg
         class="ml-2"
         width="20"
         height="20"
