--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -4,9 +4,7 @@ import { faCode } from "@fortawesome/free-solid-svg-icons";
 ---
 
 
-<section class="w-full h-96">
-  <div class="bg-gradient-to-b from-[#0d0d30] via-[#0c0c2e] to-transparent w-full h-32 ">
-
-  </div>
+<section class="w-full h-auto">
+  <div class="bg-gradient-to-b from-[#0d0d30] via-[#0c0c2e] to-transparent w-full h-32 "/>
 </section>
 
