--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 interface Props {
 	title: string;
 }
+import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import Hero from '../components/Hero.astro';
 import Section from '../components/Section.astro';
@@ -25,6 +26,8 @@ const { title } = Astro.props;
 		<Hero/>
 		<slot />
 		<Section />
+		
+		<Footer />
 	</body>
 </html>
 
