register diseñado terminado hecho responsive

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,42 +7,73 @@ import { faTelegram } from "@fortawesome/free-brands-svg-icons";
 import { faCode } from "@fortawesome/free-solid-svg-icons";
 ---
 
-<footer class="bg-gradient-to-t from-[#12122e] to-transparent w-full h-[18rem] md:h-[18rem] text-base">
-  <div title="logo" class="flex items-center gap-4 justify-center mt-20 mb-10 pt-10">
-      <img src="../../logo.svg" class="rounded-full size-14" />
-      <h1 class="hidden md:flex font-bold text-white">Aula de Software Libre - FP Córdoba</h1>
+<footer
+  class="bg-gradient-to-t from-[#12122e] to-transparent w-full h-[18rem] md:h-[18rem] text-base"
+>
+  <div
+    title="logo"
+    class="flex items-center gap-4 justify-center mt-20 mb-10 pt-10"
+  >
+    <img src="../../logo.svg" class="rounded-full size-12" />
+    <h1 class="hidden md:flex font-bold text-white text-xs">
+      Aula de Software Libre - FP Córdoba
+    </h1>
   </div>
 
   <div>
-      <ul class="flex items-center gap-6 justify-center text-slate-300 ">
-          <li>
-              <a href="https://www.linkedin.com/company/aula-de-software-libre-lope-de-vega/" class="hover:text-white transition-all duration-300">
-                  <FontAwesomeIcon icon={faLinkedin} className="size-10 md:size-12 transition-all duration-300 hover:scale-125 focus:scale-125" />
-              </a>
-          </li>
-          <li>
-              <a href="https://github.com/AulaSoftwareLibreCordoba" class="hover:text-white transition-all duration-300">
-                  <FontAwesomeIcon icon={faGithubSquare} className="size-10 md:size-12 transition-all duration-300 hover:scale-125 focus:scale-125" />
-              </a>
-          </li>
-          <li>
-              <a href="https://discord.gg/p6bE7uJCK2" class="hover:text-white transition-all duration-300">
-                  <FontAwesomeIcon icon={faDiscord} className="size-10 md:size-12 transition-all duration-300 hover:scale-125 focus:scale-125" />
-              </a>
-          </li>
-          <li>
-              <a href="https://t.me/+buqc7nlJ4oM2MzJk" class="hover:text-white transition-all duration-300">
-                  <FontAwesomeIcon icon={faTelegram} className="size-10 md:size-12 transition-all duration-300 hover:scale-125 focus:scale-125" />
-              </a>
-          </li>
-      </ul>
+    <ul class="flex items-center gap-6 justify-center text-slate-300">
+      <li>
+        <a
+          href="https://www.linkedin.com/company/aula-de-software-libre-lope-de-vega/"
+          class="hover:text-white transition-all duration-300"
+        >
+          <FontAwesomeIcon
+            icon={faLinkedin}
+            className="size-10 md:size-12 transition-all duration-300 hover:scale-125 focus:scale-125"
+          />
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://github.com/AulaSoftwareLibreCordoba"
+          class="hover:text-white transition-all duration-300"
+        >
+          <FontAwesomeIcon
+            icon={faGithubSquare}
+            className="size-10 md:size-12 transition-all duration-300 hover:scale-125 focus:scale-125"
+          />
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://discord.gg/p6bE7uJCK2"
+          class="hover:text-white transition-all duration-300"
+        >
+          <FontAwesomeIcon
+            icon={faDiscord}
+            className="size-10 md:size-12 transition-all duration-300 hover:scale-125 focus:scale-125"
+          />
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://t.me/+buqc7nlJ4oM2MzJk"
+          class="hover:text-white transition-all duration-300"
+        >
+          <FontAwesomeIcon
+            icon={faTelegram}
+            className="size-10 md:size-12 transition-all duration-300 hover:scale-125 focus:scale-125"
+          />
+        </a>
+      </li>
+    </ul>
   </div>
 
   <div class="flex items-center justify-center gap-2">
-      <FontAwesomeIcon icon={faCode} className="size-3 text-slate-500" />
-      <p class="mt-10 mb-10 text-center text-xs text-slate-500">Diseñado y desarrollado por el Aula de Software Libre</p>
-      <FontAwesomeIcon icon={faCode} className="size-3 text-slate-500" />
+    <FontAwesomeIcon icon={faCode} className="size-3 text-slate-500" />
+    <p class="mt-10 mb-10 text-center text-xs text-slate-500">
+      Diseñado y desarrollado por el Aula de Software Libre
+    </p>
+    <FontAwesomeIcon icon={faCode} className="size-3 text-slate-500" />
   </div>
 </footer>
-
-
