--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,6 +14,7 @@
       y la Creatividad en Cada Proyecto.
     </p>
     <a
+      href="/register"
       class="cursor-pointer w-auto mb-10 inline-flex items-center justify-center py-3 px-6 text-base font-semibold text-center text-white rounded-full bg-blue-600 shadow-xs hover:bg-blue-800 hover:scale-105 transition-all duration-500"
     >
       Únete a nosotros 
