arreglos en el login

--- a/src/components/Register.astro
+++ b/src/components/Register.astro
@@ -17,7 +17,7 @@ import Footer from "./Footer.astro";
             <img src="https://tecdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" class="w-full md:w-80 xl:w-full" />
           </div>
 
-          <div class="mb-12 md:mb-0 md:w-8/12 lg:w-5/12 xl:w-5/12">
+          <div class="-mb-12 md:mb-0 md:w-8/12 lg:w-5/12 xl:w-5/12">
             <form>
               <div class="relative mb-6">
                 <input
