--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -2,5 +2,5 @@
 import LayoutAuth from '../layouts/LayoutLogin.astro';
 ---
 
-<LayoutAuth title="Aula Software Libre - Registro">
+<LayoutAuth title="Aula Software Libre - Inicio de sesión">
 </LayoutAuth>
