--- a/src/components/Login.astro
+++ b/src/components/Login.astro
@@ -2,22 +2,34 @@
 import Footer from "./Footer.astro";
 ---
 
-<section class="min-h-[80vh] flex flex-col bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-[#22235f] via-[#27286b] to-[#0d0d30] bg-center bg-cover">
-
-  <div class="flex-grow flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center">
-    <h1 class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-9 leading-tight">
+<section
+  class="min-h-screen flex flex-col bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-[#22235f] via-[#27286b] to-[#0d0d30] bg-center bg-cover"
+>
+  <div
+    class="flex-grow flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center"
+  >
+    <h1
+      class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-9 leading-tight"
+    >
       <span class="text-white">Inicio de </span>
       <span class="typing text-blue-600">sesión</span>
     </h1>
 
     <section>
       <div class="h-full">
-        <div class="flex h-full flex-wrap items-center justify-center lg:justify-between">
-          <div class="shrink-1 mb-12 grow-0 basis-auto md:mb-10 md:w-9/10 md:shrink-0 lg:w-6/12 xl:w-6/12">
-            <img src="https://tecdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" class="w-full md:w-80 xl:w-full" />
+        <div
+          class="flex h-full flex-wrap items-center justify-center lg:justify-between"
+        >
+          <div
+            class="shrink-1 mb-12 grow-0 basis-auto md:mb-10 md:w-9/10 md:shrink-0 lg:w-6/12 xl:w-6/12"
+          >
+            <img
+              src="../../login.webp"
+              class="w-full md:w-80 lg:w-full xl:w-full"
+            />
           </div>
 
-          <div class="mb-12 md:mb-0 md:w-8/12 lg:w-5/12 xl:w-5/12">
+          <div class="-mb-12 md:mb-0 md:w-8/12 lg:w-5/12 xl:w-5/12">
             <form>
               <div class="relative mb-6">
                 <input
@@ -29,7 +41,8 @@ import Footer from "./Footer.astro";
                 <label
                   for="email"
                   class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
-                >Correo electrónico</label>
+                  >Correo electrónico</label
+                >
               </div>
 
               <div class="relative mb-6">
@@ -42,7 +55,8 @@ import Footer from "./Footer.astro";
                 <label
                   for="password"
                   class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
-                >Contraseña</label>
+                  >Contraseña</label
+                >
               </div>
 
               <div class="text-center lg:text-left">
@@ -52,19 +66,24 @@ import Footer from "./Footer.astro";
                 >
                   Iniciar sesión
                 </button>
-                <p class="max-w-md mx-auto text-sm font-normal text-gray-500 m-5">
-                  ¿No tienes una cuenta? <a href="/register" class="underline hover:text-white transition-all duration-500">Regístrate</a>
+                <p
+                  class="max-w-md mx-auto text-sm font-normal text-gray-500 m-5"
+                >
+                  ¿No tienes una cuenta? <a
+                    href="/register"
+                    class="underline hover:text-white transition-all duration-500"
+                    >Regístrate</a
+                  >
                 </p>
               </div>
             </form>
           </div>
-
         </div>
       </div>
     </section>
   </div>
 
-  <footer class="w-full min-h-[20vh]">
+  <footer class="w-full min-h-[20vh] mt-auto">
     <Footer />
   </footer>
 </section>
