arreglo enlaces fallaba con el footer

--- a/src/components/Login.astro
+++ b/src/components/Login.astro
@@ -66,14 +66,12 @@ import Footer from "./Footer.astro";
                 >
                   Iniciar sesión
                 </button>
-                <p
-                  class="max-w-md mx-auto text-sm font-normal text-gray-500 m-5"
-                >
-                  ¿No tienes una cuenta? <a
-                    href="/register"
-                    class="underline hover:text-white transition-all duration-500"
-                    >Regístrate</a
-                  >
+                <p class="text-gray-500 m-5 mb-11">
+                  ¿No tienes una cuenta? 
+                  <a href="/register"
+                    class="underline hover:text-white transition-all duration-500">
+                    Regístrate
+                  </a>
                 </p>
               </div>
             </form>
