--- a/src/components/Register.astro
+++ b/src/components/Register.astro
@@ -65,7 +65,7 @@ import Footer from "./Footer.astro";
                 >
                   Registrarme
                 </button>
-                <p class="max-w-md mx-auto text-sm font-normal text-gray-500 m-5">
+                <p class="max-w-md mx-auto text-sm font-normal text-gray-500 m-5 mb-11">
                   ¿Ya tienes una cuenta? <a href="/login" class="underline hover:text-white transition-all duration-500">Inicia sesión</a>
                 </p>
               </div>
