ajuste de la imagen de register

--- a/src/components/Login.astro
+++ b/src/components/Login.astro
@@ -62,7 +62,7 @@ import Footer from "./Footer.astro";
               <div class="text-center lg:text-left">
                 <button
                   type="button"
-                  class="hover:scale-105 inline-block w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-white shadow-primary-3 transition-all duration-300 ease-in-out bg-blue-600 hover:bg-blue-800 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
+                  class="hover:scale-105 ease-in-out inline-block w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-white shadow-primary-3 transition-all duration-300 bg-blue-600 hover:bg-blue-800 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
                 >
                   Iniciar sesión
                 </button>
