--- a/src/components/Register.astro
+++ b/src/components/Register.astro
@@ -13,8 +13,11 @@ import Footer from "./Footer.astro";
     <section>
       <div class="h-full">
         <div class="flex h-full flex-wrap items-center justify-center lg:justify-between">
-          <div class="shrink-1 mb-12 grow-0 basis-auto md:mb-10 md:w-9/10 md:shrink-0 lg:w-6/12 xl:w-6/12">
-            <img src="https://tecdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" class="w-full md:w-80 xl:w-full" />
+          <div class="shrink-1 mb-6 grow-0 basis-auto md:mb-4 md:w-7/10 md:shrink-0 lg:w-5/12 xl:w-5/12">
+            <img
+              src="https://tecdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+              class="w-10/12 md:w-64 lg:w-10/12 xl:w-10/12 mx-auto"
+            />
           </div>
 
           <div class="-mb-12 md:mb-0 md:w-8/12 lg:w-5/12 xl:w-5/12">
