ajustes del footer y en el footer del register

--- a/src/components/Register.astro
+++ b/src/components/Register.astro
@@ -80,7 +80,7 @@ import Footer from "./Footer.astro";
     </section>
   </div>
 
-  <footer class="w-full min-h-[20vh]">
+  <footer class="w-full min-h-[20vh] mt-10">
     <Footer />
   </footer>
 </section>
