cambio en la api publica de automatizacion de correo

--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -16,7 +16,7 @@ import { faMailReply } from "@fortawesome/free-solid-svg-icons";
         </span>
       </div>
       <form
-        action="https://formsubmit.co/alvaroofernaandez@gmail.com"
+        action="https://formsubmit.co/beab82fec9726f554c899ced6de3192b"
         method="POST"
         id="contacto"
         class="w-full md:w-2/3 max-w-lg mt-16"
