--- a/src/components/Register.astro
+++ b/src/components/Register.astro
@@ -185,7 +185,7 @@ const apiUrl = import.meta.env.ENDPOINT_REGISTER;
           // Verificar si el token existe y redirigir
           if (data.jwt) {
             setTimeout(() => {
-              window.location.href = '/';
+              window.location.href = '/aula';
             }, 3000);
           } else {
             setTimeout(() => {
