--- a/src/components/FooterMain.astro
+++ b/src/components/FooterMain.astro
@@ -8,7 +8,7 @@ import { faCode } from "@fortawesome/free-solid-svg-icons";
 ---
 
 <footer
-  class="bg-gradient-to-t from-[#12122e] to-transparent w-full h-[18rem] md:h-[18rem] text-base absolute bottom-0"
+  class="bg-gradient-to-t from-[#12122e] to-transparent w-full h-[18rem] md:h-[18rem] text-base"
 >
   <div
     title="logo"
