--- a/src/layouts/LayoutMain.astro
+++ b/src/layouts/LayoutMain.astro
@@ -2,6 +2,8 @@
 import Footer from '../components/FooterMain.astro';
 import Header from '../components/HeaderMain.astro';
 import Main from '../components/Main.astro';
+import "../styles/global.css";
+
 interface Props {
 	title: string;
 }
