--- a/src/layouts/LayoutRegister.astro
+++ b/src/layouts/LayoutRegister.astro
@@ -2,6 +2,8 @@
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import Register from '../components/Register.astro';
+import "../styles/global.css";
+
 
 interface Props {
 	title: string;
