solucion error deploy

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,9 +25,9 @@ const { title } = Astro.props;
 	<body>
 		<Header/>
 		<slot />
-		<Hero client:visible/>
+		<Hero/>
 		<slot />
-		<Section client:visible/>
+		<Section />
 		<Contacto/>
 		<Footer />
 	</body>
