--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -22,7 +22,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="block rounded-lg hover:bg-slate-600 p-4 transition-all duration-300" aria-label="Más sobre Software Libre">
+          <a href="/softwarelibre" class="block rounded-lg hover:bg-slate-600 p-4 transition-all duration-300" aria-label="Más sobre Software Libre">
             Software Libre 
           </a>
         </li>
