--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 ---
 
 <header
-  class="bg-gradient-to-b from-[#0d0d30] to-transparent w-screen h-20 fixed z-50"
+  class="bg-gradient-to-b from-[#14272a] to-transparent w-screen h-20 fixed z-50"
 >
   <div class="flex items-center h-full px-4 justify-between">
     <ul class="flex gap-3 text-slate-400 ml-5">
