--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,21 +1,21 @@
 <section
-  class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-[#22235f] via-[#27286b] to-[#0d0d30] bg-center bg-cover"
+  class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-[#234d54] via-[#0b4650] to-[#06292f] bg-center bg-cover"
 >
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center">
     <h1
       class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-4 leading-tight"
     >
       <span class="text-white ">Bienvenid@ al</span>
-      <span class="typing text-blue-600">Aula de Software Libre</span>
+      <span class="typing text-[#e6ff2b]">Aula de Software Libre</span>
 
     </h1>
-    <p class="max-w-md mx-auto text-sm font-normal text-gray-500 mb-6">
+    <p class="max-w-md mx-auto text-sm font-normal text-slate-300 mb-6">
       Transformamos Ideas en Soluciones Abiertas, Fomentando el Conocimiento
       y la Creatividad en Cada Proyecto.
     </p>
     <a
       href="/register"
-      class="cursor-pointer w-auto mb-10 inline-flex items-center justify-center py-3 px-6 text-base font-semibold text-center text-white rounded-full bg-blue-600 shadow-xs hover:bg-blue-800 hover:scale-105 transition-all duration-500"
+      class="cursor-pointer w-auto mb-10 inline-flex items-center justify-center py-3 px-6 text-base font-semibold text-center text-black rounded-full bg-[#e6ff2b] shadow-xs hover:bg-[#a3af4a] hover:scale-105 transition-all duration-500"
     >
       Únete a nosotros 
       <svg
@@ -28,7 +28,7 @@
       >
         <path
           d="M7.5 15L11.0858 11.4142C11.7525 10.7475 12.0858 10.4142 12.0858 10C12.0858 9.58579 11.7525 9.25245 11.0858 8.58579L7.5 5"
-          stroke="white"
+          stroke="black"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"></path>
