--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,7 +15,7 @@
     </p>
     <a
       href="/register"
-      class="cursor-pointer w-auto mb-10 inline-flex items-center justify-center py-3 px-6 text-base font-semibold text-center text-black rounded-full bg-[#e6ff2b] shadow-xs hover:bg-[#a3af4a] hover:scale-105 transition-all duration-500"
+      class="cursor-pointer w-auto mb-10 inline-flex items-center justify-center py-3 px-6 text-base font-semibold text-center text-slate-800 rounded-full bg-[#e6ff2b] shadow-xs hover:bg-[#a3af4a] hover:scale-105 transition-all duration-500"
     >
       Únete a nosotros 
       <svg
