--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -5,12 +5,12 @@ import { faMailReply } from "@fortawesome/free-solid-svg-icons";
 const apiUrl = import.meta.env.ENDPOINT_MAILS;
 ---
 
-<section class="bg-gradient-to-b from-[#0a0a2a] via-[#0d0d43] to-transparent relative pb-[4.6rem] md:pb-20">
+<section class="bg-[#14272a] relative pb-[4.6rem] md:pb-20">
   <div class="container mx-auto px-4 md:px-6 lg:px-8">
     <div class="flex flex-col lg:flex-row items-center lg:items-start justify-center lg:gap-12 xl:gap-20">
       <div class="w-full md:w-1/3 max-w-md mt-16 text-center md:text-left">
         <h1 class="text-white text-4xl md:text-5xl font-bold flex items-center justify-center lg:justify-start gap-5">
-          Contacto <FontAwesomeIcon icon={faMailReply} className="text-blue-600 size-8" />
+          Contacto <FontAwesomeIcon icon={faMailReply} className="text-[#e6ff2b] size-8" />
         </h1>
         <span class="text-slate-400 text-sm text-center">
           Contacta con nosotros para más información y unirte a nuestra
@@ -47,7 +47,7 @@ const apiUrl = import.meta.env.ENDPOINT_MAILS;
         <div class="mt-4 text-center lg:text-right">
           <button
             type="submit"
-            class="cursor-pointer w-auto inline-flex items-center justify-center py-3 px-6 text-base font-semibold text-center text-white rounded-full bg-blue-600 shadow-xs hover:bg-blue-800 hover:scale-105 transition-all duration-500"
+            class="cursor-pointer w-auto inline-flex items-center justify-center py-3 px-6 text-base font-semibold text-center text-slate-800 rounded-full bg-[#e6ff2b] shadow-xs hover:bg-[#a3af4a] hover:scale-105 transition-all duration-500"
             >Enviar</button
           >
         </div>
@@ -55,7 +55,6 @@ const apiUrl = import.meta.env.ENDPOINT_MAILS;
 
     </div>
   </div>
-  <div class="absolute bottom-0 left-0 right-0 h-20 bg-gradient-to-b from-transparent via-[rgba(13,13,67,0.5)] to-[#0d0d43]"></div>
 </section>
 
 <div id="alertContainer" class="fixed bottom-10 right-4 flex justify-center items-end z-50 hidden">
