cambios en los header y footer

--- a/src/components/HeaderMain.astro
+++ b/src/components/HeaderMain.astro
@@ -2,13 +2,13 @@
 ---
 
 <header
-  class="bg-gradient-to-b from-[#0d0d30] to-transparent w-screen h-20 fixed z-50"
+  class="bg-gradient-to-b from-[#14272a] to-transparent w-screen h-20 fixed z-50"
 >
   <div class="flex items-center h-full justify-center gap-10">
     <ul class="flex gap-5 text-slate-400">
       <li>
         <a href="/">
-          <img src="/logo.svg" alt="Logo del aula" class="size-12 rounded-full hover:scale-150 transition-all duration-500"/>
+          <img src="/logo.svg" alt="Logo del aula" class="size-12 rounded-full hover:scale-125 transition-all duration-500"/>
         </a>
       </li> 
     </ul>
